# This is a CMake build file for PastelRay.

cmake_minimum_required(VERSION 2.8)

source_group(
"Shape"
FILES
box_shape.cpp
box_shape.h
shape.cpp
shape.h
sphere_shape.cpp
sphere_shape.h
sphere_shape.txt
)

source_group(
"Brdf"
FILES
brdf.cpp
brdf.h
lambertian_brdf.cpp
lambertian_brdf.h
)

source_group(
"Lens"
FILES
lens.cpp
lens.h
pinhole_lens.cpp
pinhole_lens.h
spherical_lens.cpp
spherical_lens.h
)

source_group(
"Thing"
FILES
composite_thing.cpp
composite_thing.h
kdtree_thing.cpp
kdtree_thing.h
kdtree_thing.hpp
set_thing.cpp
set_thing.h
set_thing.hpp
shape_thing.cpp
shape_thing.h
thing.cpp
thing.h
)

source_group(
"Material"
FILES
diffuse_material.cpp
diffuse_material.h
material.cpp
material.h
)

set(PastelRay_Files
beam.cpp
beam.h
beam_tools.cpp
beam_tools.h
box_shape.cpp
box_shape.h
brdf.cpp
brdf.h
camera.cpp
camera.h
composite_thing.cpp
composite_thing.h
differential_geometry.cpp
differential_geometry.h
diffuse_material.cpp
diffuse_material.h
integrator.h
kdtree_thing.cpp
kdtree_thing.h
kdtree_thing.hpp
lambertian_brdf.cpp
lambertian_brdf.h
lens.cpp
lens.h
light.cpp
light.h
localgeometry.cpp
localgeometry.h
material.cpp
material.h
optics.h
optics.hpp
pinhole_lens.cpp
pinhole_lens.h
rayforward.h
raylibrary.h
render.cpp
set_thing.cpp
set_thing.h
set_thing.hpp
shape.cpp
shape.h
shape_thing.cpp
shape_thing.h
shapeintersection.h
spectrum.cpp
spectrum.h
spectrum.hpp
sphere_shape.cpp
sphere_shape.h
sphere_shape.txt
spherical_lens.cpp
spherical_lens.h
thing.cpp
thing.h
)

include_directories(${Pastel_Source_Dir})
link_directories(${Pastel_Binary_Dir}/lib)
add_library(PastelRay ${PastelRay_Files})
